--- a/app/templates/ambilFoto.html
+++ b/app/templates/ambilFoto.html
@@ -1,38 +1,24 @@
 {% extends 'base.html'%}
 {% block content%}
-<div class="container">
-  <div class="container">
-    <div class="dropdown" style="padding-top: 150px;">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-        Dropdown button
-      </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+<div class="container" style="padding-top: 100px;">
+  <form method="post" action="/post/" enctype="multipart/form-data">
+    <div class="form-floating mb-3">
+        <input type="file" name="image[]" class="form-control" id="floatingInput" autocomplete="off" required>
       </div>
-    </div>
-      <div class="row row-cols-2" style="padding-top: 10px;">
-        <div class="col" style="align-items: center;">
-          <div class="card" style="width: 18rem;">
-              <img src="{{url_for('static',filename='images/ambilGambar.png')}}" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-              <img src="{{url_for('static',filename='images/galeri.png')}}" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
+        <div class="col-md">
+          <div class="form-floating mb-3">
+            <select class="form-select" name="kelas" id="floatingSelectGrid" aria-label="Floating label select example">
+              <option selected>Pilih Kelas</option>
+              <option value="5A">Kelas 5A</option>
+              <option value="5B">Kelas 5B</option>
+              <option value="5C">Kelas 5C</option>
+              <option value="5D">Kelas 5D</option>
+            </select>
+          </div>
         </div>
       </div>
-  </div>
-  
-  <button type="button" class="btn btn-primary" style="justify-items: center;">Submit</button>
+      <input class="btn btn-primary" type="submit" value="Submit" style="width: 150px;">
+  </form>
 </div>
   
 {%endblock%}
