--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -35,6 +35,12 @@
                                     <input class="input is-large" type="password" name="password" placeholder="Password">
                                 </div>
                             </div>
+
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-large" type="text" name="role" placeholder="role" autofocus="">
+                                </div>
+                            </div>
                 
                             <button class="button is-block is-info is-large is-fullwidth">Registrasi</button>
                         </form>
